# AI-Daily-Post-Generator

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-pipeline.yml
app/: __init__.py  config.py  db.py  models.py  runner.py
app/email/: sender.py
app/llm/: client.py  prompts.py  schemas.py
app/scrapers/: blog.py  markdown_extractor.py  orchestrator.py
app/sources/: registry.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_OPTIMIZATION.md  REFACTOR_SUMMARY.md
scripts/: drop_and_recreate_tables.py
